# extremko_refaktorizacia

./: CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  Game.h  HealthPotion.cpp  HealthPotion.h  Map.cpp  Map.h  Pawn.cpp  Pawn.h  Pickup.cpp  Pickup.h  PickupBase.cpp  PickupBase.h  Player.cpp  Player.h  PowerPotion.cpp  PowerPotion.h  SpeedPotion.cpp  SpeedPotion.h  clovece.py  documentation.txt  main.cpp  refactored.txt  save.txt  test_game.cpp  todo.txt
